.pipeline/kube/nexus-ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: nexus.labbi.lab
      http:
        paths:
          - backend:
              service:
                name: nexus-nexus-repository-manager
                port:
                  number: 8081
            path: /
            pathType: Prefix
